[package]
name = "budgetbeast"
version = "0.1.2"
edition = "2021"
description = "A telegram bot for personal budget tracking"
publish = false

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
google-sheets4 = "6.0.0"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
yup-oauth2 = "11.0.0"
config = "0.14.1"
anyhow = "1.0.94"
chrono = "0.4.39"
