[package]
name = "budgetbeast"
version = "0.1.8"
edition = "2021"
description = "A telegram bot for personal budget tracking"
publish = false

[dependencies]
teloxide = { version = "0.13", features = ["macros", "webhooks", "axum", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
google-sheets4 = "6.0.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
yup-oauth2 = "12.1.0"
config = "0.15.4"
anyhow = "1.0.94"
chrono = "0.4.39"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio-retry = "0.3.0"
url = "2.5.4"
uuid = { version = "1.13.1", features = ["v4"] }
